[package]
name = "git-heat"
version = "0.1.0"
description = "Git commit calendar"
edition = "2024"

[dependencies]
chrono = "0.4.41"
apca = { git = "https://github.com/zsugabubus/apca-rs" }
clap = { version = "4.5.38", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
thiserror = "2.0.12"
